<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.froad.cbank</groupId>
		<artifactId>froad-community-bank</artifactId>
		<version>1.12.0-SNAPSHOT</version>
	</parent>
	<groupId>com.froad.cbank.coremodule</groupId>
	<artifactId>coremodule</artifactId>
	<packaging>pom</packaging>
	<name>Froad Cbank CoreModule</name>
	
	<developers>
		<developer>
			<id>hujz</id>
			<name>jiuzhou hu</name>
			<email>hujiuzhou@f-road.com.cn</email>
		</developer>
	</developers>
	
	<modules>
		<module>module</module>
	</modules>
	<properties>
		<safe.version>0.0.1-SNAPSHOT</safe.version>
		<froad-cbank-server-api.version>1.12.0-SNAPSHOT</froad-cbank-server-api.version>
		<froad-data-hive-api.version>1.1.0-SNAPSHOT</froad-data-hive-api.version>
		<froad-cbank-server-boss-api.version>1.12.0-SNAPSHOT</froad-cbank-server-boss-api.version>
		<framework-common.version>0.0.1-SNAPSHOT</framework-common.version>
		<web-basic.version>0.0.1-SNAPSHOT</web-basic.version>
		<expand-log.version>0.0.1-SNAPSHOT</expand-log.version>
		<expand-thrift.version>0.0.1-SNAPSHOT</expand-thrift.version>
		<expand-redis.version>0.0.1-SNAPSHOT</expand-redis.version>
		
		<package.environment>dev</package.environment>
	
		<java.version>1.6</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	
		<spring.version>4.0.3.RELEASE</spring.version>
		<spring.servlet.version>3.2.4.RELEASE</spring.servlet.version>
		<spring.context.support.version>3.2.9.RELEASE</spring.context.support.version>
		<aspectj.version>1.6.11.RELEASE</aspectj.version>
		<servlet.api.version>3.0</servlet.api.version>
		<javax.xml.bind.version>2.1.7</javax.xml.bind.version>
		<validation.api.version>1.0.0.GA</validation.api.version>
		<commons.codec.version>1.6</commons.codec.version>
		<commons.logging.version>1.1.1</commons.logging.version>
		<jackson.version>1.9.3</jackson.version>
		<aspecjtrj.version>1.7.4</aspecjtrj.version>
		<commons.lang.version>2.4</commons.lang.version>
		<commons.io.version>2.4</commons.io.version>
		<commons.beanutils.version>1.8.3</commons.beanutils.version>
		<dom4j.version>1.6.1</dom4j.version>
		<aspectjweaver.version>1.7.0</aspectjweaver.version>
		<aopalliance.version>1.0</aopalliance.version>
		<script.version>1.0</script.version>
		<ezmorph.version>1.0.6</ezmorph.version>
		<net.sf.json.version>2.3</net.sf.json.version>
		<dozer.version>5.5.1</dozer.version>
		<commons.fileupload.version>1.3.1</commons.fileupload.version>
		<jstl.version>1.2</jstl.version>
		<antlr.version>2.7.7</antlr.version>
		<commons.collections.version>3.2.1</commons.collections.version>
		<eclipse.jetty.version>8.1.9.v20130131</eclipse.jetty.version>
		<jspapi.version>2.0-20040521</jspapi.version>
		<httpclient.version>4.1.2</httpclient.version>
		<scheduler.quartz.version>1.8.5</scheduler.quartz.version>
		<jmagick.version>6.6.9</jmagick.version>
		<net.sf.json.version>2.3</net.sf.json.version>
		<artofsolving.jodconverter.version>2.2.1</artofsolving.jodconverter.version>
		<pinyin4j.version>1.1.0</pinyin4j.version>
		<apache.poi.version>3.9</apache.poi.version>
		<avalon.excalibur.version>4.1</avalon.excalibur.version>
		<apache.ant.zip.version>1.8.0</apache.ant.zip.version>
		<captcha.version>1.0-RC6</captcha.version>
		<commons.pool.version>1.5.4</commons.pool.version>
		<commons.net.version>3.3</commons.net.version>
		<ganymed.ssh2.version>build210</ganymed.ssh2.version>
		<jxls-core.version>1.0.5</jxls-core.version>
		<mybatis-spring.version>1.2.3</mybatis-spring.version>
		
		<maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
		<maven.jetty.plugin.version>8.1.9.v20130131</maven.jetty.plugin.version>
		<maven.resources.plugin.version>2.4.3</maven.resources.plugin.version>
		<maven.surefire.plugin.version>2.7.2</maven.surefire.plugin.version>
		<aspectj.maven.plugin.version>1.0</aspectj.maven.plugin.version>
		<maven.war.plugin.version>2.4</maven.war.plugin.version>
	</properties>
	
	<dependencyManagement>
		<dependencies>
			<!-- projects dependencies -->
			
			<dependency>
				<groupId>com.froad.safe</groupId>
				<artifactId>froad-safe-api</artifactId>
				<version>${safe.version}</version>
			</dependency>
			
			<dependency>
				<groupId>com.froad.cbank</groupId>
				<artifactId>froad-cbank-server-api</artifactId>
				<version>${froad-cbank-server-api.version}</version>
			</dependency>
			<!-- 自定义报表 -->
			<dependency>
				<groupId>com.froad.dataplat</groupId>
				<artifactId>froad-data-hive-api</artifactId>
				<version>${froad-data-hive-api.version}</version>
			</dependency>
			<dependency>
				<groupId>com.froad.cbank</groupId>
				<artifactId>froad-cbank-server-boss-api</artifactId>
				<version>${froad-cbank-server-boss-api.version}</version>
			</dependency>
			<dependency>
				<groupId>com.froad.cbank.coremodule.framework.web</groupId>
				<artifactId>web-basic</artifactId>
				<version>${web-basic.version}</version>
			</dependency>
			<dependency>
				<groupId>com.froad.cbank.coremodule.framework</groupId>
				<artifactId>framework-common</artifactId>
				<version>${framework-common.version}</version>
			</dependency>

			<dependency>
				<groupId>com.froad.cbank.coremodule.framework.expand</groupId>
				<artifactId>expand-log</artifactId>
				<version>${expand-log.version}</version>
			</dependency>
			<dependency>
				<groupId>com.froad.cbank.coremodule.framework.expand</groupId>
				<artifactId>expand-thrift</artifactId>
				<version>${expand-thrift.version}</version>
			</dependency>
			<dependency>
				<groupId>com.froad.cbank.coremodule.framework.expand</groupId>
				<artifactId>expand-redis</artifactId>
				<version>${expand-redis.version}</version>
			</dependency>
			
			<!-- Test dependencies -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.version}</version>
				<scope>test</scope>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			
			<!-- Spring Framework dependencies -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aop</artifactId>
				<version>${spring.version}</version>
			</dependency>
			
			<!-- Spring Web dependencies -->
			<dependency>
				<groupId>javax.xml.bind</groupId>
				<artifactId>com.springsource.javax.xml.bind</artifactId>
				<version>${javax.xml.bind.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc-portlet</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context-support</artifactId>
				<version>${spring.context.support.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-servlet</artifactId>
				<version>${spring.servlet.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-portlet</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			
			<dependency>
				<groupId>jspapi</groupId>
				<artifactId>jsp-api</artifactId>
				<version>${jspapi.version}</version>
				<scope>provided</scope>
			</dependency>
			
			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>${validation.api.version}</version>
			</dependency>
			
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons.codec.version}</version>
			</dependency>
			
			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging</artifactId>
				<version>${commons.logging.version}</version>
			</dependency>
			<!-- jackson -->
			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-mapper-asl</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjrt</artifactId>
				<version>${aspecjtrj.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${commons.lang.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>${commons.beanutils.version}</version>
			</dependency>
			<dependency>
				<groupId>dom4j</groupId>
				<artifactId>dom4j</artifactId>
				<version>${dom4j.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjweaver</artifactId>
				<version>${aspectjweaver.version}</version>
			</dependency>
			<dependency>
				<groupId>aopalliance</groupId>
				<artifactId>aopalliance</artifactId>
				<version>${aopalliance.version}</version>
			</dependency>
			
			<dependency>
				<groupId>javax.script</groupId>
				<artifactId>script-api</artifactId>
				<version>${script.version}</version>
			</dependency>
			
			<dependency>
				<groupId>net.sf.ezmorph</groupId>
				<artifactId>ezmorph</artifactId>
				<version>${ezmorph.version}</version>
			</dependency>
			<dependency>
				<groupId>net.sf.json-lib</groupId>
				<artifactId>json-lib</artifactId>
				<version>${net.sf.json.version}</version>
				<classifier>jdk13</classifier>
			</dependency>
			<dependency>
				<groupId>net.sf.dozer</groupId>
				<artifactId>dozer</artifactId>
				<version>${dozer.version}</version>
			</dependency>
			
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons.fileupload.version}</version>
			</dependency>
			<dependency>
				<groupId>jstl</groupId>
				<artifactId>jstl</artifactId>
				<version>${jstl.version}</version>
			</dependency>
			
			<dependency>
				<groupId>antlr</groupId>
				<artifactId>antlr</artifactId>
				<version>${antlr.version}</version>
			</dependency>
			
			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>${commons.collections.version}</version>
			</dependency>
			
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>${servlet.api.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-webapp</artifactId>
				<version>${eclipse.jetty.version}</version>
				<scope>provided</scope>
			</dependency>
			
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpcore</artifactId>
				<version>${httpclient.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz</artifactId>
				<version>${scheduler.quartz.version}</version>
			</dependency>
			
			<dependency>
				<groupId>jmagick</groupId>
				<artifactId>jmagick</artifactId>
				<version>${jmagick.version}</version>
			</dependency>
			
			<dependency>
				<groupId>com.artofsolving</groupId>
				<artifactId>jodconverter</artifactId>
				<version>${artofsolving.jodconverter.version}</version>
			</dependency>
			
			<dependency>
				<groupId>net.sourceforge</groupId>
				<artifactId>pinyin4j</artifactId>
				<version>${pinyin4j.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-scratchpad</artifactId>
				<version>${apache.poi.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.apache</groupId>
				<artifactId>avalon-excalibur</artifactId>
				<version>${avalon.excalibur.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.apache.ant</groupId>
				<artifactId>apache-ant-zip</artifactId>
				<version>${apache.ant.zip.version}</version>
			</dependency>
			
			<dependency>
				<groupId>com.octo.captcha</groupId>
				<artifactId>jcaptcha-all</artifactId>
				<version>${captcha.version}</version>
	    	</dependency>
	    	
	    	<dependency>
				<groupId>commons-pool</groupId>
				<artifactId>commons-pool</artifactId>
				<version>${commons.pool.version}</version>
			</dependency>
			
			<dependency>
				<groupId>commons-net</groupId>
				<artifactId>commons-net</artifactId>
				<version>${commons.net.version}</version>
			</dependency>
			
			<!-- scp -->
			<dependency>
				<groupId>ch.ethz.ganymed</groupId>
				<artifactId>ganymed-ssh2</artifactId>
				<version>${ganymed.ssh2.version}</version>
			</dependency>
			
			<dependency>
			    <groupId>net.sf.jxls</groupId>
			    <artifactId>jxls-core</artifactId>
			    <version>${jxls-core.version}</version>
			</dependency>
			
			<!-- mybatis-spring -->
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis-spring</artifactId>
				<version>${mybatis-spring.version}</version>
			</dependency>
			
			<dependency>
				<groupId>com.froad.dataplat</groupId>
				<artifactId>froad-data-hive-api</artifactId>
				<version>${froad-data-hive-api.version}</version>
			</dependency>
			
		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.plugin.version}</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<encoding>${project.build.sourceEncoding}</encoding>
	                    <!-- <compilerArguments>
	                        <verbose />
	                        <bootclasspath>${java.home}\lib\rt.jar;${java.home}\lib\jce.jar</bootclasspath>
	                    </compilerArguments> -->
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.mortbay.jetty</groupId> 
        			<artifactId>jetty-maven-plugin</artifactId> 
					<version>${maven.jetty.plugin.version}</version>
					<configuration>
						<scanIntervalSeconds>5</scanIntervalSeconds>
						<reload>automatic</reload>
						<scanIntervalSeconds>3</scanIntervalSeconds>
						<systemProperties>
							<systemProperty>
								<name>org.mortbay.util.URI.charset</name>
								<value>UTF-8</value>
							</systemProperty>
						</systemProperties>
						<webApp>
							<contextPath>/</contextPath>
						</webApp>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>aspectj-maven-plugin</artifactId>
					<version>${aspectj.maven.plugin.version}</version>
					<dependencies>
						<!-- NB: You must use Maven 2.0.9 or above or these are ignored (see 
							MNG-2972) -->
						<dependency>
							<groupId>org.aspectj</groupId>
							<artifactId>aspectjrt</artifactId>
							<version>${aspectj.version}</version>
						</dependency>
						<dependency>
							<groupId>org.aspectj</groupId>
							<artifactId>aspectjtools</artifactId>
							<version>${aspectj.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven.resources.plugin.version}</version>
					<configuration>
						<encoding>${project.build.sourceEncoding}</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven.surefire.plugin.version}</version>
					<configuration>
						<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m
							-Dfile.encoding=UTF-8</argLine>
						<forkMode>always</forkMode>
						<useFile>false</useFile>
						<includes>
							<include>**/*Tests.java</include>
						</includes>
						<excludes>
							<exclude>**/Abstract*.java</exclude>
						</excludes>
						<junitArtifactName>junit:junit</junitArtifactName>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		
	</build>
</project>